# LocalServerApps

./: .env.example  .gitignore  .gitmodules  add_submodule.sh  deploy.sh  download.sh  update_submodules.sh
automation/: PI_SETUP.md  README.md  ctl.py  services.json
automation/backends/: __init__.py  base.py  launchd.py  systemd.py
sites/: CLAUDE.md
sites/admin_panel/: README.md  pyproject.toml  start.sh
sites/admin_panel/admin_panel/: main.py
sites/admin_panel/static/: index.html
