[project]
name = "admin-panel"
version = "0.1.0"
description = "LocalServerApps admin panel: toggle sites/automations, show server load"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psutil>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["admin_panel"]
